test/Fail/CyclicModuleDependency1.agda
module CyclicModuleDependency1 where

import CyclicModuleDependency2
